Fix text overlapping with arrow in some browsers (firefox)

--- a/src/modules/OrderForm/OrderForm.module.scss
+++ b/src/modules/OrderForm/OrderForm.module.scss
@@ -148,7 +148,7 @@
 }
 
 .select {
-  width: 190px;
+  width: 200px;
   padding: 8px 40px 8px 16px;
   background: $bg;
   border-radius: 8px;
